# rknpu2-rs

./: Cargo.toml  README.md  TODOS.md
.github/workflows/: ci.yaml
crates/rknpu2/: Cargo.toml  README.md
crates/rknpu2-sys/: Cargo.toml  README.md  build.rs
crates/rknpu2-sys/src/: api.rs  lib.rs  rt.rs
crates/rknpu2/examples/: mobilenet.rs
crates/rknpu2/examples/models/: mobilenet_v2.rknn
crates/rknpu2/src/: api.rs  error.rs  io.rs  lib.rs  mem.rs  query.rs  rknn.rs  tensor.rs  utils.rs
crates/rknpu2/src/api/: linked.rs  runtime.rs
crates/rknpu2/src/io/: buffer.rs  input.rs  output.rs
crates/rknpu2/src/query/: in_out_num.rs  input_attr.rs  native_input_attr.rs  native_nc1hwc2_input_attr.rs  native_nc1hwc2_output_attr.rs  native_nhwc_input_attr.rs  native_nhwc_output_attr.rs  native_output_attr.rs  output_attr.rs  perf_detail.rs  perf_run.rs  sdk_version.rs
crates/rknpu2/src/tensor/: builder.rs  tensor.rs
crates/rknpu2/tests/: test_query.rs  test_run.rs
crates/rktensor/: Cargo.toml
crates/rktensor/src/: implementation.rs  lib.rs  markers.rs  softmax.rs
