[package]
name = "rknpu2-sys"
version = "0.0.1"
edition = "2024"
description = "Unofficial bindings to rknn-toolkit2 (librknnrt and librknnmrt)"
repository = "https://github.com/boydjohnson/rknpu2-rs"
license = "MIT OR Apache-2.0"

[dependencies]
libloading = { version = "0.8.8", optional = true }


[features]
default = []

rv110x = [] # For RV1103 / RV1106 / B variants
rk2118 = [] # For RK2118
rk35xx = [] # For RK356x / RK3588 / RV1126B
rk3576 = [] # For RK3576 / RK3588 with full multi-core support
docs = [
    "rv110x",
    "rk2118",
    "rk35xx",
    "rk3576",
    "libloading",
] # Requires nightly compiler

[package.metadata.docs.rs]
features = ["docs"]
rustc-args = ["--cfg", "docsrs"]
