[package]
name = "rknpu2"
version = "0.1.0"
edition = "2024"

[dependencies]
half = "2.6.0"
rknpu2-sys = { path = "../rknpu2-sys" }

[features]
default = ["libloading"]

rv110x = ["rknpu2-sys/rv110x"] # For RV1103 / RV1106 / B variants
rk2118 = ["rknpu2-sys/rk2118"] # For RK2118
rk35xx = ["rknpu2-sys/rk35xx"] # For RK356x / RV1126B
rk3576 = [
    "rknpu2-sys/rk3576",
] # For RK3576 / RK3588 with full multi-core support
docs = [
    "rv110x",
    "rk2118",
    "rk35xx",
    "rk3576",
    "libloading",
] # Requires nightly compiler
libloading = ["rknpu2-sys/libloading"]
