[package]
name = "rknpu2"
version = "0.0.7"
edition = "2024"
description = "Unofficial bindings to rknpu2 (librknnrt and librknnmrt)"
repository = "https://github.com/boundarybitlabs/rknpu2-rs"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rknpu2"

[dependencies]
half = { workspace = true }
rknpu2-sys = "0.0.1"

[features]
default = []

rv110x = ["rknpu2-sys/rv110x"] # For RV1103 / RV1106 / B variants
rk2118 = ["rknpu2-sys/rk2118"] # For RK2118
rk35xx = ["rknpu2-sys/rk35xx"] # For RK356x / RV1126B
rk3576 = [
    "rknpu2-sys/rk3576",
] # For RK3576 / RK3588 with full multi-core support
docs = [
    "rv110x",
    "rk2118",
    "rk35xx",
    "rk3576",
    "libloading",
] # Requires nightly compiler
libloading = ["rknpu2-sys/libloading"]

[dev-dependencies]
image = "0.25.9"
itertools = "0.14.0"

[package.metadata.docs.rs]
features = ["docs"]
rustc-args = ["--cfg", "docsrs"]
